# QuantWhiz

./: .gitignore  CMakeLists.txt  README.md
include/: BollingerBands_Algorithm.hpp  EMA_Algorithm.hpp  Indicator.h  MACD_Algorithm.hpp  OHLCV.hpp  RSI_Algorithm.hpp  SMA_Algorithm.hpp  SignalResult.hpp  StockDataFetcher.hpp  utils.hpp
include/algorithm/: ADX.hpp  APO.hpp  ATR.hpp  ATR_Algorithm.hpp  BollingerBands.hpp  BollingerBands_Algorithm.hpp  CCI.hpp  DividendYield.hpp  EMA.hpp  EMA_Algorithm.hpp  FibonacciRetracement.hpp  KNN_Algorithm.hpp  MA.hpp  MACD_Algorithm.hpp  MFI.hpp  OBV.hpp  PERatio.hpp  RSI.hpp  RSI_Algorithm.hpp  SMA.hpp  SMA_Algorithm.hpp  StochasticOscillator.hpp  StochasticOscillator_Algorithm.hpp  VWAP.hpp
include/indicator/: Indicator.h  strategy.hpp
src/: StockDataFetcher.cpp  main.cpp  utils.cpp
src/Strategy/: custom.cpp
src/indicators/: ADX.cpp  APO.cpp  ATR.cpp  ATR_Algorithm.cpp  BollingerBands.cpp  BollingerBands_Algorithm.cpp  CCI.cpp  DividendYield.cpp  EMA.cpp  EMA_Algorithm.cpp  FibonacciRetracement.cpp  KNN_Algorithm.cpp  MA.cpp  MACD_Algorithm.cpp  MFI.cpp  OBV.cpp  PERatio.cpp  RSI.cpp  RSI_Algorithm.cpp  SMA.cpp  SMA_Algorithm.cpp  StochasticOscillator.cpp  StochasticOscillator_Algorithm.cpp  VWAP.cpp
